--- a/humidity-microservice/build.gradle
+++ b/humidity-microservice/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.opencsv:opencsv:5.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.h2database:h2'
