--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -10,6 +10,7 @@ sourceCompatibility = '15'
 
 repositories {
 	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
@@ -17,10 +18,7 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
- 	implementation 'com.sun.jersey.contribs:jersey-apache-client4' 	
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
