--- a/humidity-microservice/src/main/resources/application.properties
+++ b/humidity-microservice/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 server.port=8081
+eureka.client.service-url.defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address= true
+spring.application.name=humidity-ms
