--- a/humidity-microservice/build.gradle
+++ b/humidity-microservice/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -46,7 +46,15 @@ jib {
 	container {
 		appRoot = '/opt'
 		ports = ['8081']
-		jvmFlags = [' -Djava.security.egd=file:/dev/./urandom']
+		//jvmFlags = [' -Djava.security.egd=file:/dev/./urandom']
+	}
+	extraDirectories {
+    	paths {
+      		path {
+        		from = '/src/main/resources'
+        		into = '/src/main/resources'
+      		}
+		}
 	}
 }
 	
@@ -55,3 +63,9 @@ assemble.dependsOn jibDockerBuild
 test {
 	useJUnitPlatform()
 }
+
+processResources {
+ 	from ('.') {
+    	include 'mjerenja.csv'
+  	}
+ }
