--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -39,7 +39,7 @@ jib {
 	container {
 		appRoot = '/opt'
 		ports = ['8761']
-		jvmFlags = [' -Djava.security.egd=file:/dev/./urandom']
+		//jvmFlags = [' -Djava.security.egd=file:/dev/./urandom']
 	}
 }
 	
