--- a/aggregator-microservice/build.gradle
+++ b/aggregator-microservice/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
  	implementation 'com.sun.jersey.contribs:jersey-apache-client4' 	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+  	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
