--- a/aggregator-microservice/src/main/resources/application.properties
+++ b/aggregator-microservice/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-temperature-format: K
+#temperature-format: K
 spring.application.name=aggregator-ms
 eureka.client.service-url.defaultZone: ${EUREKA_URI:http://eureka-server:8761/eureka}
 eureka.instance.prefer-ip-address= true
+spring.profiles.active=deafult
+spring.config.import=configserver:http://localhost:8888
