--- a/humidity-microservice/build.gradle
+++ b/humidity-microservice/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 	implementation 'com.opencsv:opencsv:5.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+  	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.0'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
