--- a/temperature-microservice/src/main/resources/application.properties
+++ b/temperature-microservice/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=8082
 eureka.client.service-url.defaultZone: ${EUREKA_URI:http://eureka-server:8761/eureka}
 eureka.instance.prefer-ip-address= true
 spring.application.name=temperature-ms
+spring.profiles.active=deafult
+spring.config.import=configserver:http://localhost:8888
