--- a/aggregator-microservice/src/main/resources/application.properties
+++ b/aggregator-microservice/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 #temperature-format: K
+temperature-ms-name: temperature-ms
+humidity-ms-name: humidity-ms
+
 spring.application.name=aggregator-ms
+
 eureka.client.service-url.defaultZone: ${EUREKA_URI:http://eureka-server:8761/eureka}
 eureka.instance.prefer-ip-address= true
+
 spring.profiles.active=deafult
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:http://config-server:8888
+
+
