--- a/humidity-microservice/build.gradle
+++ b/humidity-microservice/build.gradle
@@ -56,9 +56,16 @@ jib {
         		from = '/src/main/resources'
         		into = '/src/main/resources'
       		}
+      		path {
+      			from = 'src/main/jib'
+      		}
 		}
+		permissions = [
+			'/wait-for-it.sh': '755'
+		]
 	}
 }
+
 	
 assemble.dependsOn jibDockerBuild
 
