--- a/temperature-microservice/src/main/resources/application.properties
+++ b/temperature-microservice/src/main/resources/application.properties
@@ -5,4 +5,4 @@ eureka.client.service-url.defaultZone: ${EUREKA_URI:http://eureka-server:8761/eu
 eureka.instance.prefer-ip-address= true
 spring.application.name=temperature-ms
 spring.profiles.active=deafult
-spring.config.import=configserver:http://localhost:8888
+spring.config.import=configserver:http://config-server:8888
