--- a/aggregator-microservice/build.gradle
+++ b/aggregator-microservice/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
  	implementation 'com.sun.jersey.contribs:jersey-apache-client4' 	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-        implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+   	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
   	implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -44,6 +44,11 @@ jib {
 		appRoot = '/opt'
 		ports = ['8080']
 		//jvmFlags = [' -Djava.security.egd=file:/dev/./urandom']
+	}
+	extraDirectories {
+		permissions = [
+			'/wait-for-it.sh': '755'
+		]
 	}
 }
 	
