--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,86 @@
 version: "3.7"
 services:
   eureka-server:
-    image: 9f255c8be8e8
+    image: 5ccdd63aa0c7
     ports:
       - "3000:8761"
 
-  aggregation-microservice:
-    image: 6bdb0a3456c4
+  config-server:
+    image: fefeaf1cacba
+    ports:
+      - "3004:8888"
+
+  aggregator-microservice:
+    image: d2bf1df16c70
     ports:
       - "3001:8080"
     depends_on:
+      - "config-server"
       - "eureka-server"
+    entrypoint:
+      - /wait-for-it.sh
+      - config-server:8888
+      - --timeout=60
+      - --strict
+      - --
+      - /wait-for-it.sh
+      - eureka-server:8761
+      - --timeout=60
+      - --strict
+      - --
+      - java
+      - -cp
+      - /opt/resources:/opt/classes:/opt/libs/*
+      - aggregatormicroservice/AggregatorMicroserviceApplication
 
   humidity-microservice:
-    image: dc6842dccba6
+    image: c5d3f35d57e9
     ports:
-      - "3002:8080"
+      - "3002:8081"
     depends_on:
+      - "config-server"
       - "eureka-server"
+    entrypoint:
+      - /wait-for-it.sh
+      - config-server:8888
+      - --timeout=60
+      - --strict
+      - --
+      - /wait-for-it.sh
+      - eureka-server:8761
+      - --timeout=60
+      - --strict
+      - --
+      - java
+      - -cp
+      - /opt/resources:/opt/classes:/opt/libs/*
+      - humiditymicroservice/HumidityMicroserviceApplication
 
   temperature-microservice:
-    image: 434228b3b408
+    image: 4cbe0e8289a9
     ports:
-      - "3003:8080"
+      - "3003:8082"
     depends_on:
+      - "config-server"
       - "eureka-server"
+    entrypoint:
+      - /wait-for-it.sh
+      - config-server:8888
+      - --timeout=60
+      - --strict
+      - --
+      - /wait-for-it.sh
+      - eureka-server:8761
+      - --timeout=60
+      - --strict
+      - --
+      - java
+      - -cp
+      - /opt/resources:/opt/classes:/opt/libs/*
+      - temperaturemicroservice/TemperatureMicroserviceApplication
+
+
+
+
+
+      
